# gradescope-scraper

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
scraper/: __main__.py  cli.py  config.py  gradescope.py  manifest.py  models.py  utils.py
tests/: test_cli.py  test_gradescope.py  test_manifest.py  test_models.py  test_utils.py
