[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gradescope-scraper"
version = "0.1.0"
description = "Archive your Gradescope submissions and returned files"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "playwright>=1.53,<2.0",
]

[project.scripts]
gradescope-scraper = "scraper.cli:main"
